[gd_scene load_steps=29 format=2]

[ext_resource path="res://TileMaps/road.png" type="Texture" id=1]
[ext_resource path="res://fact.png" type="Texture" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scared.png" type="Texture" id=4]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Area2D.gd" type="Script" id=6]
[ext_resource path="res://World/Door.tscn" type="PackedScene" id=7]
[ext_resource path="res://TileMaps/wood.png" type="Texture" id=8]
[ext_resource path="res://TileMaps/pixil-frame-0 (20).png" type="Texture" id=9]
[ext_resource path="res://Scenes/ColorRect2.gd" type="Script" id=10]
[ext_resource path="res://u.png" type="Texture" id=11]

[sub_resource type="GDScript" id=11]
script/source = "extends ColorRect

onready var label = $Label
onready var colorRect = self
onready var popupD = get_parent().get_node(\"PopupDialog\")
onready var popupLabel = popupD.get_node(\"Label\")

var textPiece = ''
var popupTextPiece = ''

func text(value):
	colorRect.visible = true
	textPiece = ''
	for i in range(len(value)):
		textPiece += value[i]
		label.text = textPiece
		yield(get_tree().create_timer(0.05), \"timeout\")
	yield(get_tree().create_timer(5.0), \"timeout\")
	colorRect.visible = false

func popupT(value):
	popupD.popup()
	popupTextPiece = ''
	for i in range(len(value)):
		popupTextPiece += value[i]
		popupLabel.text = popupTextPiece
		yield(get_tree().create_timer(0.05), \"timeout\")
		popupD.visible = true
	yield(get_tree().create_timer(5.0), \"timeout\")
	popupD.visible = false

func _ready():
	self.visible = false
	yield(get_tree().create_timer(5.0), \"timeout\")
	popupT('Though the Trickster is a trouble maker and often cruel, his behavior is naive rather than mean.')
	yield(get_tree().create_timer(10.0), \"timeout\")
	popupT('If you see him, try to reason with him a bit.')
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.8652, 12.4419 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=2]
0/name = "road.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1, 0, 223, 33 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 54, Vector2( 1, 0 ), 216, Vector2( 1, 1 ), 27, Vector2( 2, 0 ), 432, Vector2( 2, 1 ), 54, Vector2( 3, 0 ), 216, Vector2( 3, 1 ), 27, Vector2( 4, 0 ), 304, Vector2( 4, 1 ), 52, Vector2( 5, 0 ), 216, Vector2( 5, 1 ), 27, Vector2( 6, 0 ), 304, Vector2( 7, 0 ), 216, Vector2( 7, 1 ), 19, Vector2( 8, 1 ), 52, Vector2( 9, 0 ), 208, Vector2( 9, 1 ), 27, Vector2( 10, 0 ), 432, Vector2( 10, 1 ), 6, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 3, Vector2( 12, 1 ), 52, Vector2( 13, 0 ), 208, Vector2( 13, 1 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=1]
0/name = "road.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1, 0, 223, 33 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 54, Vector2( 1, 0 ), 216, Vector2( 1, 1 ), 27, Vector2( 2, 0 ), 432, Vector2( 2, 1 ), 54, Vector2( 3, 0 ), 216, Vector2( 3, 1 ), 27, Vector2( 4, 0 ), 304, Vector2( 4, 1 ), 52, Vector2( 5, 0 ), 216, Vector2( 5, 1 ), 27, Vector2( 6, 0 ), 304, Vector2( 7, 0 ), 216, Vector2( 7, 1 ), 19, Vector2( 8, 1 ), 52, Vector2( 9, 0 ), 208, Vector2( 9, 1 ), 27, Vector2( 10, 0 ), 432, Vector2( 10, 1 ), 6, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 3, Vector2( 12, 1 ), 52, Vector2( 13, 0 ), 208, Vector2( 13, 1 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "fact.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "fact.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 34, 11.5 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 31, 0, 31, 30, 0, 30 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=16]
0/name = "pixil-frame-0 (20).png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, -32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 12 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "pixil-frame-0 (20).png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 13 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "pixil-frame-0 (20).png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 14 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "wood.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 15 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 7.5, 13 )

[node name="Factory" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 22.0
margin_top = 128.0
margin_right = 301.0
margin_bottom = 174.0
color = Color( 0.215686, 0.188235, 0.188235, 0.192157 )
script = SubResource( 11 )

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
margin_right = 40.0
margin_bottom = 14.0
text = "Test"

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
visible = false
color = Color( 0.654902, 0.129412, 0.129412, 1 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
margin_right = 320.0
margin_bottom = 181.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="CanvasLayer/ColorRect2"]

[node name="Tween2" type="Tween" parent="CanvasLayer/ColorRect2"]

[node name="Tween3" type="Tween" parent="CanvasLayer/ColorRect2"]

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer"]
margin_left = -1.0
margin_top = 139.0
margin_right = 314.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="CanvasLayer/PopupDialog"]
margin_left = 4.0
margin_top = 5.0
margin_right = 309.0
margin_bottom = 37.0
autowrap = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 160.547, 38.7188 )
scale = Vector2( 1.39063, 1.34375 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="StaticBody2D"]
position = Vector2( 157, 35 )
frames = SubResource( 9 )
frame = 3
playing = true

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( -983036, 0, 2, -983035, 0, 1, -983032, 0, 0, -983024, 0, 2, -983023, 0, 7, -917500, 0, 0, -917499, 0, 0, -917497, 0, 0, -917496, 0, 0, -917488, 0, 0, -917487, 0, 0, -851964, 0, 0, -851963, 0, 0, -851960, 0, 0, -851959, 0, 0, -851958, 0, 0, -851957, 0, 0, -851956, 0, 0, -851955, 0, 0, -851952, 0, 0, -851951, 0, 0, -786428, 0, 0, -786427, 0, 0, -786424, 0, 0, -786420, 0, 0, -786418, 0, 0, -786417, 0, 0, -786416, 0, 0, -786415, 0, 0, -720892, 0, 0, -720891, 0, 0, -720884, 0, 0, -720883, 0, 0, -720880, 0, 0, -720879, 0, 0, -655356, 0, 0, -655355, 0, 0, -655347, 0, 0, -655344, 0, 0, -655343, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -589811, 0, 0, -589808, 0, 0, -589807, 0, 0, -524284, 0, 0, -524283, 0, 0, -524275, 0, 0, -524272, 0, 0, -524271, 0, 0, -458748, 0, 0, -458747, 0, 0, -458739, 0, 0, -458736, 0, 0, -458735, 0, 0, -393212, 0, 0, -393211, 0, 0, -393203, 0, 0, -393200, 0, 0, -393199, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 7, -327667, 0, 0, -327664, 0, 0, -327663, 0, 0, -262140, 0, 0, -262139, 0, 0, -262134, 0, 65538, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262128, 0, 0, -262127, 0, 0, -196604, 0, 65538, -196603, 0, 65539, -196599, 0, 0, -196592, 0, 65536, -196591, 0, 65545, 4, 0, 0, 17, 0, 0, 18, 0, 0, 65540, 0, 0, 65541, 0, 7, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 131076, 0, 65536, 131077, 0, 0, 131078, 0, 3, 131086, 0, 0, 131087, 0, 0, 196613, 0, 65536, 196614, 0, 0, 196615, 0, 0, 196621, 0, 0, 196622, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 3, 262155, 0, 10, 262156, 0, 0, 262157, 0, 0, 327688, 0, 65536, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 65541, 393225, 0, 0, 393226, 0, 0, 458761, 0, 0, 458762, 0, 0, 524297, 0, 0, 524298, 0, 0, 589833, 0, 0, 589834, 0, 0, 655369, 0, 65536, 655370, 0, 65549 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( -983034, 2, 0, -983033, 2, 0, -983031, 2, 0, -983030, 2, 0, -983029, 2, 0, -983028, 2, 0, -983027, 2, 0, -983026, 2, 0, -983025, 2, 0, -917498, 2, 0, -917495, 2, 0, -917494, 2, 0, -917493, 2, 0, -917492, 2, 0, -917491, 2, 0, -917490, 2, 0, -917489, 2, 0, -851962, 2, 0, -851961, 2, 0, -851954, 2, 0, -851953, 2, 0, -786426, 2, 0, -786425, 2, 0, -786423, 2, 0, -786422, 2, 0, -786421, 2, 0, -786419, 2, 0, -720890, 2, 0, -720889, 2, 0, -720888, 2, 0, -720887, 2, 0, -720886, 2, 0, -720885, 2, 0, -720882, 2, 0, -720881, 2, 0, -655354, 2, 0, -655353, 2, 0, -655352, 2, 0, -655351, 2, 0, -655350, 2, 0, -655349, 2, 0, -655348, 2, 0, -655346, 2, 0, -655345, 2, 0, -589813, 2, 0, -589812, 2, 0, -589810, 2, 0, -589809, 2, 0, -524282, 2, 0, -524281, 2, 0, -524280, 2, 0, -524279, 2, 0, -524278, 2, 0, -524277, 2, 0, -524276, 2, 0, -524274, 2, 0, -524273, 2, 0, -458746, 2, 0, -458745, 2, 0, -458744, 2, 0, -458743, 2, 0, -458742, 2, 0, -458741, 2, 0, -458740, 2, 0, -458738, 2, 0, -458737, 2, 0, -393210, 2, 0, -393209, 2, 0, -393208, 2, 0, -393207, 2, 0, -393206, 2, 0, -393205, 2, 0, -393204, 2, 0, -393202, 2, 0, -393201, 2, 0, -327668, 2, 0, -327666, 2, 0, -327665, 2, 0, -262138, 2, 0, -262137, 2, 0, -262136, 2, 0, -262135, 2, 0, -262130, 2, 0, -262129, 2, 0, -196602, 2, 0, -196601, 2, 0, -196600, 2, 0, -196598, 2, 0, -196597, 2, 0, -196596, 2, 0, -196595, 2, 0, -196594, 2, 0, -196593, 2, 0, 17, 2, 0, 131077, 2, 0, 262156, 2, 0, 458761, 2, 0 )

[node name="Door" parent="." instance=ExtResource( 7 )]
position = Vector2( 72, -16 )

[node name="Door2" parent="." instance=ExtResource( 7 )]
position = Vector2( 282, -15 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 159, 92 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 159, 92 )
current = true
smoothing_enabled = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 161, 60.5 )
shape = SubResource( 10 )

[node name="TileMap3" type="TileMap" parent="."]
modulate = Color( 1, 0.584314, 0, 1 )
scale = Vector2( 0.25, 0.25 )
tile_set = SubResource( 16 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( -4915164, 1, 0, -4849628, 1, 0, -4784121, 1, 0, -4784092, 1, 0, -4718585, 1, 0, -4718556, 1, 0, -4653049, 1, 0, -4653020, 1, 0, -4587513, 1, 0, -4587484, 1, 0, -4521977, 1, 0, -4521948, 1, 0, -4456441, 1, 0, -4456412, 1, 0, -4390905, 1, 0, -4390876, 1, 0, -4325369, 1, 0, -4325340, 1, 0, -4259833, 1, 0, -4259804, 1, 0, -4194297, 1, 0, -4194268, 1, 0, -4128761, 1, 0, -4128732, 1, 0, -4063225, 1, 0, -4063196, 1, 0, -3997689, 1, 0, -3997660, 1, 0, -3932153, 1, 0, -3932124, 1, 0, -3866617, 1, 0, -3866588, 1, 0, -3801081, 1, 0, -3801052, 1, 0, -3735545, 1, 0, -3735516, 1, 0, -3670009, 1, 0, -3669980, 1, 0, -3604473, 1, 0, -3604444, 1, 0, -3538937, 1, 0, -3538908, 1, 0, -3473401, 1, 0, -3473372, 1, 0, -3407865, 1, 0, -3407836, 1, 0, -3342329, 1, 0, -3342300, 1, 0, -3276793, 1, 0, -3276764, 1, 0, -3211257, 1, 0, -3211228, 1, 0, -3145721, 1, 0, -3145692, 1, 0, -3080185, 1, 0, -3080156, 1, 0, -3014649, 1, 0, -3014620, 1, 0, -2949113, 1, 0, -2949084, 1, 0, -2883577, 1, 0, -2883548, 1, 0, -2818041, 1, 0, -2818012, 1, 0, -2752505, 1, 0, -2752476, 1, 0, -2686969, 1, 0, -2686940, 1, 0, -2621433, 1, 0, -2621404, 1, 0, -2555897, 1, 0, -2555868, 1, 0, -2490361, 1, 0, -2490332, 1, 0, -2424825, 1, 0, -2424796, 1, 0, -2359289, 1, 0, -2359260, 1, 0, -2293753, 1, 0, -2293752, 1, 0, -2293751, 1, 0, -2293750, 1, 0, -2293749, 1, 0, -2293748, 1, 0, -2293747, 1, 0, -2293746, 1, 0, -2293743, 1, 0, -2293742, 1, 0, -2293741, 1, 0, -2293740, 1, 0, -2293724, 1, 0, -2228217, 1, 0, -2228209, 1, 0, -2228208, 1, 0, -2228204, 1, 0, -2228201, 1, 0, -2228200, 1, 0, -2228199, 1, 0, -2228198, 1, 0, -2228197, 1, 0, -2228196, 1, 0, -2228193, 1, 0, -2228192, 1, 0, -2228191, 1, 0, -2228190, 1, 0, -2228189, 1, 0, -2228188, 1, 0, -2162681, 1, 0, -2162652, 1, 0, -2097145, 1, 0, -2097116, 1, 0, -2031609, 1, 0, -2031580, 1, 0, -1966073, 1, 0, -1966044, 1, 0, -1900537, 1, 0, -1900508, 1, 0, -1835001, 1, 0, -1834972, 1, 0, -1769465, 1, 0, -1769436, 1, 0, -1703929, 1, 0, -1703900, 1, 0, -1638393, 1, 0, -1638364, 1, 0, -1572857, 1, 0, -1572828, 1, 0, -1507321, 1, 0, -1507292, 1, 0, -1441785, 1, 0, -1441756, 1, 0, -1376249, 1, 0, -1376220, 1, 0, -1310713, 1, 0, -1310684, 1, 0, -1245177, 1, 0, -1245148, 1, 0, -1179641, 1, 0, -1179612, 1, 0, -1114105, 1, 0, -1114076, 1, 0, -1048569, 1, 0, -1048540, 1, 0, -983033, 1, 0, -983004, 1, 0, -917497, 1, 0, -917468, 1, 0, -851961, 1, 0, -851932, 1, 0, -786425, 1, 0, -786396, 1, 0, -720889, 1, 0, -720860, 1, 0, -655353, 1, 0, -655324, 1, 0, -589817, 1, 0, -589788, 1, 0, -524281, 1, 0, -524252, 1, 0, -458745, 1, 0, -458716, 1, 0, -393209, 1, 0, -393180, 1, 0, -327673, 1, 0, -327644, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262134, 1, 0, -262133, 1, 0, -262132, 1, 0, -262131, 1, 0, -262130, 1, 0, -262129, 1, 0, -262128, 1, 0, -262127, 1, 0, -262126, 1, 0, -262125, 1, 0, -262124, 1, 0, -262123, 1, 0, -262122, 1, 0, -262121, 1, 0, -262120, 1, 0, -262119, 1, 0, -262118, 1, 0, -262117, 1, 0, -262116, 1, 0, -262115, 1, 0, -262114, 1, 0, -262113, 1, 0, -262112, 1, 0, -262111, 1, 0, -262108, 1, 0, -262107, 1, 0, -262106, 1, 0, -262105, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196598, 1, 0, -196597, 1, 0, -196596, 1, 0, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -196588, 1, 0, -196587, 1, 0, -196586, 1, 0, -196585, 1, 0, -196584, 1, 0, -196583, 1, 0, -196582, 1, 0, -196581, 1, 0, -196580, 1, 0, -196579, 1, 0, -196578, 1, 0, -196577, 1, 0, -196576, 1, 0, -196575, 1, 0, -196572, 1, 0, -196571, 1, 0, -196570, 1, 0, -196569, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -131052, 1, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 1, 0, -131044, 1, 0, -131043, 1, 0, -131042, 1, 0, -131041, 1, 0, -131040, 1, 0, -131039, 1, 0, -131036, 1, 0, -131035, 1, 0, -131034, 1, 0, -131033, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65500, 1, 0, -65499, 1, 0, -65498, 1, 0, -65497, 1, 0, 65535, 1, 0, 39, 2, 0, 131071, 1, 0, 65575, 2, 0, 196607, 1, 0, 131111, 2, 0, 262143, 1, 0, 196647, 2, 0, 327679, 1, 0, 262183, 2, 0, 393215, 1, 0, 327719, 2, 0, 458751, 1, 0, 393255, 2, 0, 524287, 1, 0, 458791, 2, 0, 589823, 1, 0, 524327, 2, 0, 655359, 1, 0, 589863, 1, 0, 720895, 1, 0, 655399, 1, 0, 786431, 1, 0, 720935, 1, 0, 851967, 1, 0, 786471, 1, 0, 917503, 1, 0, 852007, 1, 0, 983039, 1, 0, 917543, 2, 0, 1048575, 1, 0, 983079, 2, 0, 1114111, 1, 0, 1048615, 2, 0, 1179647, 1, 0, 1114151, 2, 0, 1245183, 1, 0, 1179687, 2, 0, 1310719, 1, 0, 1245223, 1, 0, 1376255, 1, 0, 1310759, 2, 0, 1441791, 1, 0, 1376295, 1, 0, 1507327, 1, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1441830, 1, 0, 1441831, 1, 0 )

[node name="U2" type="Sprite" parent="."]
position = Vector2( 244, -249.375 )
scale = Vector2( 0.492187, 0.457031 )
texture = ExtResource( 11 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="U" type="Sprite" parent="Area2D2"]
position = Vector2( 179, -249.875 )
scale = Vector2( 0.492187, 0.441406 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 176, -251 )
shape = SubResource( 17 )

[connection signal="body_shape_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_shape_exited"]
[connection signal="body_shape_entered" from="Area2D2" to="CanvasLayer/ColorRect2" method="_on_Area2D2_body_shape_entered"]
